# fileEmailSender

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-setup-and-security-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-canva-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/canva_client/: __init__.py  __main__.py  auth.py  canva_api.py  cli.py  config.py  exporter.py  matcher.py  models.py  pages.py  pipeline.py
src/file_email_sender/: __init__.py  __main__.py  cli.py  config.py  mailer.py  matcher.py  pipeline.py
tests/: conftest.py  test_canva_api.py  test_config.py  test_exporter.py  test_matcher.py  test_models.py  test_pages.py
