[project]
name = "file-email-sender"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "yagmail>=0.15.293",
]

[project.scripts]
file-email-sender = "file_email_sender.cli:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fpdf2>=2.8.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
